# lajiaoc-

./: CMakeLists.txt  jsecmake.rar
jsecmake/: Alien.cpp  Alien.h  AlienSpecie.cpp  AlienSpecie.h  CMakeLists.txt  Crew.cpp  Crew.h  Planet.h  SpaceShip.cpp  SpaceShip.h  TradingStation.cpp  TradingStation.h  Warthog.cpp  Warthog.h  jse.sln  jse.vcxproj  jse.vcxproj.filters  jsecmake.cpp  jsecmake.h
jsecmake/Debug/: jse.ilk  vc140.idb
jsecmake/Debug/jse.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  jse.lastbuildstate  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
